listo el sistema a falta de aprobacion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="divider"></div>
         </div>
         <div id="button-container">
-            <button class="start-btn" data-option="particles">Iniciar Sistema de Partículas</button>
+            <button class="start-btn" data-option="particles">Sistema de Partículas</button>
         </div>
     </div>
     
